feat(conversion-formats): change formats route to return object
route now returns downward compatible object

close #53
