# src/routes/routes.ts
@@ -138,6 +138,14 @@ const models: TsoaRoute.Models = {
 		"type": { "dataType": "array", "array": { "ref": "IFormat" }, "validators": {} },
 	},
 	// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+	"IApiConversionFormatResponse": {
+		"dataType": "refObject",
+		"properties": {
+			"document": { "ref": "TConversionFormats", "required": true },
+		},
+		"additionalProperties": false,
+	},
+	// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 };
 const validationService = new ValidationService(models);
 
@@ -194,6 +202,7 @@ export function RegisterRoutes(app: express.Express) {
 	app.get('/conversion/:conversionId',
 		function(request: any, response: any, next: any) {
 			const args = {
+				req: { "in": "request", "name": "req", "required": true, "dataType": "object" },
 				conversionId: { "in": "path", "name": "conversionId", "required": true, "dataType": "string" },
 			};
 
